@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.995-14
-Date: 2006-08-07
+Version: 0.995-15
+Date: 2006-08-..
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
